--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@
   
   input {
     border: 1px solid transparent;
-    background-color: #f1f1f1;
     padding: 10px;
     font-size: 16px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    border:solid 1px gray;
   }
   
   input[type=text] {
